# CIRCUIT-AI

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  render-build.sh  render-start.sh  render.yaml  uptime_monitor.ps1
ai-engine/: Dockerfile  pyproject.toml
ai-engine/engine/: classifier.py  main.py
ai-engine/engine/content/: sources.py
ai-engine/engine/core/: config.py  model_registry.py
ai-engine/engine/llm/: context_manager.py  model_registry.py  ollama_client.py  source_resolver.py
ai-engine/engine/llm/prompts/: circuit_generation.py  component_info.py  learning_tutor.py  repair_diagnosis.py
ai-engine/engine/speech/stt/: audio_preprocessor.py  vosk_handler.py  whisper_handler.py
ai-engine/engine/speech/tts/: __init__.py  tts_engine.py  voice_profile.py
ai-engine/scripts/: generate_circuits.py
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: __init__.py  ai.py  auth.py  bom.py  circuits.py  components.py  conversations.py  costs.py  export.py  files.py  marketplace.py  projects.py  safety.py  sources.py  users.py  wikipedia.py
backend/app/core/: config.py  dependencies.py  exceptions.py  security.py  storage.py
backend/app/db/: base.py  mixins.py  repository.py
backend/app/db/migrations/: env.py  script.py.mako
backend/app/db/seeds/: __init__.py  seed_sources.py
backend/app/models/: __init__.py  circuit.py  component.py  conversation.py  cost_estimate.py  marketplace_listing.py  project.py  project_component.py  safety_report.py  source.py  user.py  voice_session.py
backend/app/schemas/: __init__.py  ai.py  auth.py  bom.py  circuit.py  common.py  component.py  conversation.py  cost.py  marketplace.py  project.py  safety.py  source.py  user.py  voice.py
backend/app/services/: __init__.py  ai_service.py  circuit_service.py  component_service.py  marketplace_service.py  project_service.py  source_service.py  wikipedia_service.py
backend/requirements/: base.txt  dev.txt  prod.txt
backend/tests/: conftest.py
backend/tests/integration/test_api/: test_auth.py  test_bom_and_export.py  test_circuits.py  test_components.py  test_conversations.py  test_costs.py  test_files.py  test_marketplace.py  test_projects.py  test_safety.py  test_sources.py  test_users.py
backend/tests/unit/: test_schemas.py  test_security.py
(+142 files in other folders)
