[project]
name = "breadboard-ai-engine"
version = "0.1.0"
description = "BreadBoard AI - AI/ML Engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "flake8>=7.0.0",
    "black>=24.2.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
]
ml = [
    "opencv-python>=4.9.0",
    "vosk>=0.3.45",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
]
stt = [
    "openai-whisper>=20231117",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "transformers>=4.37.0",
    "sentencepiece>=0.1.99",
]

[tool.setuptools.packages.find]
include = ["engine*"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
